[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/terrain.gd" type="Script" id=1]
[ext_resource path="res://assets/isohex.png" type="Texture" id=2]
[ext_resource path="res://assets/selected_mask.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 32, 0, 64, 8, 64, 24, 32, 32, 0, 24, 0, 8 )

[sub_resource type="CanvasItemMaterial" id=2]

shader/shading_mode = 0

[node name="terrain" type="Node2D"]

[node name="hex_tile" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
map_pos = null
walkable = true

[node name="hex_blank" type="Sprite" parent="hex_tile"]

material/material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false
hframes = 2
region_rect = Rect2( 0, 0, 64, 32 )

[node name="select_mask" type="Light2D" parent="hex_tile/hex_blank"]

enabled = false
texture = ExtResource( 3 )
offset = Vector2( 32, 16 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = 0
range/z_max = 0
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="over_mask" type="Light2D" parent="hex_tile/hex_blank"]

enabled = false
texture = ExtResource( 3 )
offset = Vector2( 32, 16 )
scale = 1.0
color = Color( 1, 1, 1, 0.480392 )
energy = 1.0
mode = 1
range/height = 0.0
range/z_min = 0
range/z_max = 0
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="collision" type="CollisionPolygon2D" parent="hex_tile"]

build_mode = 0
polygon = Vector2Array( 32, 0, 64, 8, 64, 24, 32, 32, 0, 24, 0, 8 )
shape_range = Vector2( 0, 0 )
trigger = false


